memcached.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: memcached
  namespace: default
spec:
  serviceName: memcached
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: memcached:1.5-alpine
        imagePullPolicy: Always
        args:
          - -m 128
          - -v
        resources:
          requests:
            memory: 128Mi
        ports:
          - name: memcached
            containerPort: 11211
