memcached-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: default
  labels:
    app: memcached
spec:
  clusterIP: None
  ports:
  - name: memcached
    port: 11211
    targetPort: 11211
  selector:
    app: memcached
