mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jamfpro-mysql
  namespace: default
  labels:
    app: jamfpro-mysql
spec:
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: jamfpro-mysql
