tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jamfpro-tomcat
  namespace: default
  labels:
    app: jamfpro-tomcat
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: jamfpro-tomcat
